test/parser/member-operator.delta.output
member-operator.delta:5:10: error: operator functions other than 'operator[]' must be non-member functions
    bool operator==(Foo f) { return false }
         ^
member-operator.delta:5:28: error: expected identifier, got '{'
    bool operator==(Foo f) { return false }
                           ^
member-operator.delta:5:28: error: unexpected '{'
    bool operator==(Foo f) { return false }
                           ^
