test/parser/member-operator.delta
// RUN: %check_errors %not %delta -parse %s

struct Foo: Copyable {
    // CHECK: 5:10: error: operator functions other than 'operator[]' must be non-member functions
    bool operator==(Foo f) { return false }
}
